@@ -8,6 +8,7 @@ import de.tr7zw.changeme.nbtapi.NBTType;
 import de.tr7zw.changeme.nbtapi.NbtApiException;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
+import org.jetbrains.annotations.NotNull;
 
 import java.io.File;
 import java.io.IOException;
@@ -17,10 +18,11 @@ public class NBTCustomOfflinePlayer extends NBTFile implements NBTCustom {
     private static final String PLAYER_FOLDER;
 
     static {
-        String worldFolder = Bukkit.getWorlds().get(0).getWorldFolder().getPath();
+        String worldFolder = Bukkit.getWorlds().getFirst().getWorldFolder().getPath();
         PLAYER_FOLDER = worldFolder + "/playerdata/";
     }
 
+    @SuppressWarnings("deprecation")
     public NBTCustomOfflinePlayer(OfflinePlayer offlinePlayer) throws IOException {
         super(new File(PLAYER_FOLDER + offlinePlayer.getUniqueId() + ".dat"));
     }
@@ -87,8 +89,9 @@ public class NBTCustomOfflinePlayer extends NBTFile implements NBTCustom {
         return getCopy().toString();
     }
 
+    @SuppressWarnings("deprecation")
     @Override
-    public NBTCompound getCopy() {
+    public @NotNull NBTCompound getCopy() {
         try {
             String bukkit = "BukkitValues";
             NBTCompound compound = new NBTContainer();
